got base mode, gonna work on other assignment, then come back to this.

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,9 +4,18 @@
     <meta charset="utf-8">
     <title>Week 4 Assignment</title>
     <!-- Create and link a CSS file! -->
+    <link href="style.css" rel="stylesheet">
+    
   </head>
   <body>
-    <h1>Week 4 Assignment - Part 2</h1>
-    <p>Check console for errors.</p>
+    <header>
+      <h1>Week 4 Assignment - Part 2</h1>
+      <p>Check console for errors.</p>
+  </header>
+  <div>
+    <h2 class="nameText">My name is Madeline</h2>
+    <img src="images/bus18.jpeg">
+    <h3 class="imageDesc">This is the bus that takes me up Nicolette to Prime and back home. It costs $2 or $2.50 a ride with my pass. I usually sit and listen to the news and play sudoku or do things on LinkedIn. It is about a 50 minute ride to Prime. AND ITS SO FUN!</h3>
+  </div>
   </body>
 </html>
