--- a/assignment/index.html
+++ b/assignment/index.html
@@ -12,9 +12,9 @@
       <h1>Week 4 Assignment - Part 2</h1>
       <p>Check console for errors.</p>
   </header>
-  <div>
+  <div class="infoDiv">
     <h2 class="nameText">My name is Madeline</h2>
-    <img src="images/bus18.jpeg">
+    <img class="bus" src="images/bus18.jpeg">
     <h3 class="imageDesc">This is the bus that takes me up Nicolette to Prime and back home. It costs $2 or $2.50 a ride with my pass. I usually sit and listen to the news and play sudoku or do things on LinkedIn. It is about a 50 minute ride to Prime. AND ITS SO FUN!</h3>
   </div>
   </body>
